--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v2
+    - name: Update rust
+      run: rustup update stable
     - name: Run build
       uses: actions-rs/cargo@v1
       with:
